--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "gitci",
   "version": "1.0.0",
   "description": "一个 git commit tool",
-  "scripts": {},
+  "scripts": {
+    "commit": "./node_modules/commitizen/bin/git-cz"
+  },
   "repository": {
     "type": "git",
     "url": "null"
